--- a/web/src/scss/_content.scss
+++ b/web/src/scss/_content.scss
@@ -5,7 +5,7 @@
 }
 
 .underline {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.644);
     padding-bottom: 1rem;
     margin-bottom: 1rem;
 }
