--- a/web/src/scss/_hiddenNavbar.scss
+++ b/web/src/scss/_hiddenNavbar.scss
@@ -1,7 +1,7 @@
 .hidden--outerContainer {
     position: fixed;
     background-color: black;
-    width: 100vw;
+    width: 100%;
 }
 
 .hidden__top {
